# shiyu

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
.github/workflows/: release.yml
backend/: build.py  config.yaml  requirements.txt  run_server.py
backend/app/: main.py
backend/app/core/: audio_processor.py  config_loader.py  model_downloader.py  sensevoice_engine.py  subtitle_formatter.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: AppContent.vue  SubtitlePreview.vue  WavePlayer.vue
